# pybind_cmake_template

./: CMakeLists.txt  README.md  setup.py
src/: main.cpp
